--- a/app.json
+++ b/app.json
@@ -1,17 +1,18 @@
 {
   "pages": [
-    "pages/login/login",
-    "pages/regist/regist",
-    "pages/index/index",
     "pages/credit/credit",
+    "pages/index/index",
+    "pages/enterReview/enterReview",
+    "pages/regist/regist",
+    "pages/login/login",
     "pages/product/product",
     "pages/person/person",
     "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#666",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarBackgroundColor": "#fa595e",
+    "navigationBarTitleText": "商户端",
     "navigationBarTextStyle": "white",
     "enablePullDownRefresh ": true
   },
@@ -22,28 +23,22 @@
     "borderStyle": "white",
     "list": [
       {
-        "pagePath": "pages/index/index",
-        "text": "首页",
-        "iconPath": "images/footer/home.png",
-        "selectedIconPath": "images/footer/home_on.png"
-      },
-      {
         "pagePath": "pages/credit/credit",
-        "text": "信用",
-        "iconPath": "images/footer/credit.png",
-        "selectedIconPath": "images/footer/credit_on.png"
+        "text": "店铺信用",
+        "iconPath": "images/footer/xinyon.png",
+        "selectedIconPath": "images/footer/xinyon_on.png"
       },
       {
         "pagePath": "pages/product/product",
-        "text": "商品",
-        "iconPath": "images/footer/product.png",
-        "selectedIconPath": "images/footer/product_on.png"
+        "text": "商品管理",
+        "iconPath": "images/footer/shangpin.png",
+        "selectedIconPath": "images/footer/shangpin_on.png"
       },
       {
         "pagePath": "pages/person/person",
-        "text": "个人",
-        "iconPath": "images/footer/person.png",
-        "selectedIconPath": "images/footer/person_on.png"
+        "text": "个人中心",
+        "iconPath": "images/footer/geren.png",
+        "selectedIconPath": "images/footer/geren_on.png"
       }
     ]
   }
